k8s/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: pfe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: imanesaadi/order-service:latest
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: pfe
spec:
  selector:
    app: order-service
  ports:
  - port: 5003
    targetPort: 5003
  type: ClusterIP
