k8s/product-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: pfe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: imanesaadi/product-service:latest
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: pfe
spec:
  selector:
    app: product-service
  ports:
  - port: 5002
    targetPort: 5002
  type: ClusterIP
